--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&family=Titillium+Web&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -6,8 +8,34 @@
 
 body {
   height: 100vh;
+  width: 100%;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: aliceblue;
+  font-family: 'Nanum Gothic', sans-serif;
+  font-size: 1.2rem;
+  color: #000;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  width: 40rem;
+  margin: auto;
+}
+
+.scoreboard {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  padding: 1.5rem 0;
 }
 
 .memory-game {
@@ -16,7 +44,7 @@ body {
   margin: auto;
   display: flex;
   flex-wrap: wrap;
-
+  perspective: 1000px;
 }
 
 .card {
